--- a/.github/workflows/Green.yml
+++ b/.github/workflows/Green.yml
@@ -17,4 +17,4 @@ jobs:
           git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git config --local user.name "${GITHUB_ACTOR}"
       - name: Green
-        run: wget -O green.sh https://pastebin.com/raw/TSdK8bzu && chmod +x ./green.sh && ./green.sh
+        run: wget -O green.sh https://pastebin.com/raw/TSdK8bzu && chmod +x ./green.sh && bash green.sh
